
- Issue #14557: Fix extensions build on HP-UX. Patch by Adi Roiban.

- Issue #14437: Fix building the _io module under Cygwin.

- Issue #14387: Do not include accu.h from Python.h.

- Issue #14359: Only use O_CLOEXEC in _posixmodule.c if it is defined.
  Based on patch from Hervé Coatanhay.

- Issue #14018: Fix OS X Tcl/Tk framework checking when using OS X SDKs.

Documentation
-------------

- Issue #16036: Improve documentation of built-in int()'s signature and
  arguments.

- Issue #15935: Clarification of argparse docs, re: add_argument() type and
  default arguments.  Patch contributed by Chris Jerdonek.

- Issue #11964: Document a change in v3.2 to the behavior of the indent
  parameter of json encoding operations.

- Issue #14674: Add a discussion of the json module's standard compliance.
  Patch by Chris Rebert.

- Issue #15630: Add an example for "continue" stmt in the tutorial. Patch by
  Daniel Ellis.

- Issue #15444: Use proper spelling for non-ASCII contributor names.  Patch
  by Serhiy Storchaka.

- Issue 15482: Properly document the default 'level' value for __import__()
  while warning about using negative values.

- Issue #15230: Clearly document some of the limitations of the runpy
  module and nudge readers towards importlib when appropriate.

- Issue #13557: Clarify effect of giving two different namespaces to exec or
  execfile().

- Issue #8799: Fix and improve the threading.Condition documentation.

- Issue #14943: Correct a default argument value for winreg.OpenKey
  and correctly list the argument names in the function's explanation.

- Issue #14034: added the argparse tutorial.

- Issue #15250: Document that filecmp.dircmp compares files shallowly. Patch
  contributed by Chris Jerdonek.

Tools/Demos
-----------

- Issue #14695: Fix missing support for starred assignments in
  Tools/parser/unparse.py.


What's New in Python 3.2.3?
===========================

*Release date: 10-Apr-2012*

Build
-----
